# ygo-transform

./: CMakeLists.txt  README.md
include/: deck.h
src/: deck.cpp  main.cpp  test.cpp
test/: mobile.ydk  pro2.ydk  test  test.cpp  test.ydk  testpro2.ydk
